<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuBangunDatar">

    <TextView
        android:id="@+id/txtjudul2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/judul2"
        android:textAlignment="center"
        android:textColor="@color/TextColor"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtPersegi"
        android:layout_width="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:text="@string/menuPersegi"
        android:textColor="@color/Btn2Color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtLingkaran"
        android:layout_width="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/menuLingkaran"
        android:textColor="@color/Btn2Color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtPersegiPanjang"
        android:layout_width="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/menuPersegiPanjang"
        android:textColor="@color/Btn2Color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtSegitiga"
        android:layout_width="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/menuSegitiga"
        android:textColor="@color/Btn2Color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTrapesium"
        android:layout_width="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/menuTrapesium"
        android:textColor="@color/Btn2Color"
        android:textSize="20sp" />

</LinearLayout>