<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtjudul1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/judul1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtUn"
                android:layout_width="134dp"
                android:layout_marginEnd="15dp"
                android:layout_height="wrap_content"
                android:text="@string/un"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:hint="@string/masukkan_username"
                android:textColor="@color/colorAccent"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txtPass"
                android:layout_width="134dp"
                android:layout_marginEnd="15dp"
                android:layout_height="wrap_content"
                android:text="@string/ps"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:hint="@string/masukkan_password"
                android:textColor="@color/colorAccent"/>
        </TableRow>

    </TableLayout>
        <Button
            android:id="@+id/btnSign"
            android:layout_width="150dp"
            android:layout_height="49dp"
            android:layout_marginStart="245dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="250dp"
            android:background="@color/BtnColor"
            android:text="@string/btnSign" />
</LinearLayout>